--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,8 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
-dist-ssr
+# dist
+# dist-ssr
 *.local
 
 # Editor directories and files
@@ -39,4 +39,4 @@ ENV/
 
 # Node
 node_modules/
-dist/
+# dist/
