--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,11 @@
-fastapi==0.104.1
-uvicorn[standard]==0.29.0
-python-multipart==0.0.9
-python-dotenv==1.0.1
-PyPDF2==3.0.1
-google-generativeai==0.6.0
-pydantic==2.7.1
-
-# Supabase stack - Let pip resolve these more freely for now
-supabase>=2.4.0
-httpx>=0.27.0
-
-# Auth
-PyJWT>=2.8.0
-
-# Testing
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
+fastapi
+uvicorn[standard]
+python-multipart
+python-dotenv
+PyPDF2
+google-generativeai
+pydantic
+supabase
+httpx
+PyJWT
  
