--- a/vercel.json
+++ b/vercel.json
@@ -20,5 +20,10 @@
       "src": "/(.*)",
       "dest": "frontend/dist/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/**": {
+      "excludeFiles": "{.venv,__pycache__,uploads,texts,*.log,*.pyc,.DS_Store}/**"
+    }
+  }
 }
