--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "echo '✅ Checking backend/supabase/schema.sql:' && ls ../../backend/supabase/schema.sql && echo '📂 Frontend directory contents:' && ls . && tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
