--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Supabase Configuration
-SUPABASE_URL=your_supabase_url
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
-SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_URL=https://opctmgyilszsyxhtkirf.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your_actual_service_role_key
+SUPABASE_ANON_KEY=your_actual_anon_key
 
 # Google API Configuration
-GOOGLE_API_KEY=your_google_api_key
+GOOGLE_API_KEY=your_actual_google_api_key
 
 # API Configuration
 API_PORT=8000
@@ -12,5 +12,5 @@ API_HOST=0.0.0.0
 
 # Frontend Configuration
 VITE_API_URL=http://localhost:8000/api
-VITE_SUPABASE_URL=your_supabase_url
-VITE_SUPABASE_KEY=your_supabase_anon_key 
+VITE_SUPABASE_URL=https://opctmgyilszsyxhtkirf.supabase.co
+VITE_SUPABASE_KEY=your_actual_anon_key 
